--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>CalculatorDemo</title>
-  </head>
 
-  <body>
-    <p>Hello World!</p>
-  </body>
+<head>
+  <title>CalculatorDemo</title>
+  <link rel='stylesheet' type='text/css' href='css/style.css'>
+</head>
+
+<body>
+  <div class="grid">
+    <div class="key zero">0</div>
+    <div class="key one">1</div>
+    <div class="key two">2</div>
+    <div class="key three">3</div>
+    <div class="key four">4</div>
+    <div class="key five">5</div>
+    <div class="key six">6</div>
+    <div class="key seven">7</div>
+    <div class="key eight">8</div>
+    <div class="key nine">9</div>
+    <div class="key dot">.</div>
+    <div class="key equal">=</div>
+    <div class="key plus">+</div>
+    <div class="key minus">-</div>
+    <div class="key multiply"></div>
+    <div class="key divide">/</div>
+    <div class="key delete">DEL</div>
+    <div class="result">empty</div>
+  </div>
+</body>
+
 </html>
