--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <div class="key multiply"></div>
     <div class="key divide">/</div>
     <div class="key delete">DEL</div>
-    <div class="result">empty</div>
+    <div class="result"></div>
   </div>
 </body>
 
