Correct some sign descriptions and contents in index.html.

--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,10 @@
     <div class="key equal">=</div>
     <div class="key plus">+</div>
     <div class="key minus">-</div>
-    <div class="key multiply"></div>
-    <div class="key divide">/</div>
-    <div class="key delete">DEL</div>
-    <div class="result"></div>
+    <div class="key multiplcation">×</div>
+    <div class="key division">÷</div>
+    <div class="key deletion">DEL</div>
+    <div class="result">empty</div>
   </div>
 </body>
 
