Restructure html components and rename component class names.

--- a/src/index.html
+++ b/src/index.html
@@ -7,26 +7,28 @@
 </head>
 
 <body>
-  <div class="grid">
-    <div class="key zero">0</div>
-    <div class="key one">1</div>
-    <div class="key two">2</div>
-    <div class="key three">3</div>
-    <div class="key four">4</div>
-    <div class="key five">5</div>
-    <div class="key six">6</div>
-    <div class="key seven">7</div>
-    <div class="key eight">8</div>
-    <div class="key nine">9</div>
-    <div class="key dot">.</div>
-    <div class="key equal">=</div>
-    <div class="key plus">+</div>
-    <div class="key minus">-</div>
-    <div class="key multiplcation">×</div>
-    <div class="key division">÷</div>
-    <div class="key deletion">DEL</div>
-    <div class="result">empty</div>
-  </div>
+  <main>
+    <div class="container">
+      <div class="result">empty</div>
+      <div class="sign deletion">DEL</div>
+      <div class="sign plus">+</div>
+      <div class="sign minus">-</div>
+      <div class="sign multiplcation">×</div>
+      <div class="sign division">÷</div>
+      <div class="number seven">7</div>
+      <div class="number eight">8</div>
+      <div class="number nine">9</div>
+      <div class="number four">4</div>
+      <div class="number five">5</div>
+      <div class="number six">6</div>
+      <div class="number one">1</div>
+      <div class="number two">2</div>
+      <div class="number three">3</div>
+      <div class="sign equal">=</div>
+      <div class="number zero">0</div>
+      <div class="sign dot">.</div>
+    </div>
+  </main>
 </body>
 
 </html>
