--- a/src/index.html
+++ b/src/index.html
@@ -10,23 +10,28 @@
   <main>
     <div class="container">
       <div class="result">empty</div>
-      <div class="sign deletion">DEL</div>
-      <div class="sign plus">+</div>
-      <div class="sign minus">-</div>
-      <div class="sign multiplcation">×</div>
-      <div class="sign division">÷</div>
-      <div class="number seven">7</div>
-      <div class="number eight">8</div>
-      <div class="number nine">9</div>
-      <div class="number four">4</div>
-      <div class="number five">5</div>
-      <div class="number six">6</div>
-      <div class="number one">1</div>
-      <div class="number two">2</div>
-      <div class="number three">3</div>
-      <div class="sign equal">=</div>
-      <div class="number zero">0</div>
-      <div class="sign dot">.</div>
+      <div class="operators">
+        <div class="sign clear">CLR</div>
+        <div class="sign deletion">DEL</div>
+        <div class="sign plus">+</div>
+        <div class="sign minus">-</div>
+        <div class="sign multiplcation">×</div>
+        <div class="sign division">÷</div>
+      </div>
+      <div class="operands">
+        <div class="number seven">7</div>
+        <div class="number eight">8</div>
+        <div class="number nine">9</div>
+        <div class="number four">4</div>
+        <div class="number five">5</div>
+        <div class="number six">6</div>
+        <div class="number one">1</div>
+        <div class="number two">2</div>
+        <div class="number three">3</div>
+        <div class="sign equal">=</div>
+        <div class="number zero">0</div>
+        <div class="sign dot">.</div>
+      </div>
     </div>
   </main>
 </body>
