Use UTF-8 encode on index.html and link empty javascript file.

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,10 @@
 <html>
 
 <head>
+  <meta charset="utf-8">
   <title>CalculatorDemo</title>
   <link rel='stylesheet' type='text/css' href='css/style.css'>
+  <script src="./js/main.js"></script>
 </head>
 
 <body>
