Add async and type attributes to complete script element.

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>CalculatorDemo</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <script src="./js/main.js"></script>
+  <script async type="text/javascript" src="./js/main.js"></script>
 </head>
 
 <body>
