Add background color modification while mouse over the key of caculator.

--- a/src/index.html
+++ b/src/index.html
@@ -11,28 +11,28 @@
 <body>
   <main>
     <div class="container">
-      <div class="result">empty</div>
+      <div class="result" onmouseover="onResultFieldMouseOver(this)" onmouseout="onResultFieldMouseOut(this)">empty</div>
       <div class="operators">
-        <div class="sign clear">CLR</div>
-        <div class="sign deletion">DEL</div>
-        <div class="sign plus">+</div>
-        <div class="sign minus">-</div>
-        <div class="sign multiplcation">×</div>
-        <div class="sign division">÷</div>
+        <div class="sign clear" onmouseover="onSignKeyMouseOver(this)" onmouseout="onSignKeyMouseOut(this)">CLR</div>
+        <div class="sign deletion" onmouseover="onSignKeyMouseOver(this)" onmouseout="onSignKeyMouseOut(this)">DEL</div>
+        <div class="sign plus" onmouseover="onSignKeyMouseOver(this)" onmouseout="onSignKeyMouseOut(this)">+</div>
+        <div class="sign minus" onmouseover="onSignKeyMouseOver(this)" onmouseout="onSignKeyMouseOut(this)">-</div>
+        <div class="sign multiplcation" onmouseover="onSignKeyMouseOver(this)" onmouseout="onSignKeyMouseOut(this)">×</div>
+        <div class="sign division" onmouseover="onSignKeyMouseOver(this)" onmouseout="onSignKeyMouseOut(this)">÷</div>
       </div>
       <div class="operands">
-        <div class="number seven">7</div>
-        <div class="number eight">8</div>
-        <div class="number nine">9</div>
-        <div class="number four">4</div>
-        <div class="number five">5</div>
-        <div class="number six">6</div>
-        <div class="number one">1</div>
-        <div class="number two">2</div>
-        <div class="number three">3</div>
-        <div class="sign equal">=</div>
-        <div class="number zero">0</div>
-        <div class="sign dot">.</div>
+        <div class="number seven" onmouseover="onNumberKeyMouseOver(this)" onmouseout="onNumberKeyMouseOut(this)">7</div>
+        <div class="number eight" onmouseover="onNumberKeyMouseOver(this)" onmouseout="onNumberKeyMouseOut(this)">8</div>
+        <div class="number nine" onmouseover="onNumberKeyMouseOver(this)" onmouseout="onNumberKeyMouseOut(this)">9</div>
+        <div class="number four" onmouseover="onNumberKeyMouseOver(this)" onmouseout="onNumberKeyMouseOut(this)">4</div>
+        <div class="number five" onmouseover="onNumberKeyMouseOver(this)" onmouseout="onNumberKeyMouseOut(this)">5</div>
+        <div class="number six" onmouseover="onNumberKeyMouseOver(this)" onmouseout="onNumberKeyMouseOut(this)">6</div>
+        <div class="number one" onmouseover="onNumberKeyMouseOver(this)" onmouseout="onNumberKeyMouseOut(this)">1</div>
+        <div class="number two" onmouseover="onNumberKeyMouseOver(this)" onmouseout="onNumberKeyMouseOut(this)">2</div>
+        <div class="number three" onmouseover="onNumberKeyMouseOver(this)" onmouseout="onNumberKeyMouseOut(this)">3</div>
+        <div class="sign equal" onmouseover="onSignKeyMouseOver(this)" onmouseout="onSignKeyMouseOut(this)">=</div>
+        <div class="number zero" onmouseover="onNumberKeyMouseOver(this)" onmouseout="onNumberKeyMouseOut(this)">0</div>
+        <div class="sign dot" onmouseover="onSignKeyMouseOver(this)" onmouseout="onSignKeyMouseOut(this)">.</div>
       </div>
     </div>
   </main>
